--- a/NoteSharingCenter.Repository/NoteSharingCenter.Repository.csproj
+++ b/NoteSharingCenter.Repository/NoteSharingCenter.Repository.csproj
@@ -51,11 +51,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CategoryRepository.cs" />
     <Compile Include="IRepository.cs" />
+    <Compile Include="NoteRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
     <Compile Include="RepositoryBase.cs" />
-    <Compile Include="Test.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NoteSharingCenter.DAL\NoteSharingCenter.DAL.csproj">
