--- a/NoteSharingCenter.Repository/NoteSharingCenter.Repository.csproj
+++ b/NoteSharingCenter.Repository/NoteSharingCenter.Repository.csproj
@@ -55,6 +55,7 @@
     <Compile Include="CommentRepository.cs" />
     <Compile Include="IRepository.cs" />
     <Compile Include="LikedRepository.cs" />
+    <Compile Include="ManagerBase.cs" />
     <Compile Include="NoteRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
