--- a/NoteSharingCenter.Sample/bin/NoteSharingCenter.Sample.dll.config
+++ b/NoteSharingCenter.Sample/bin/NoteSharingCenter.Sample.dll.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -25,7 +25,7 @@
   </appSettings>
   <connectionStrings>
     <add name="DatabaseContext" connectionString="Server=GURHAN\SQLEXPRESS;Database=NoteSharingCenterDB;integrated security=True;"
-      providerName="System.Data.SqlClient"/>
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
